# USA_flights_analysis

./: LICENSE  README.md  pyproject.toml
src/: USA_Flights_Analysis.ipynb
src/flight_analysis/: Analysis.py  DataProcessing.py  DataSubsetting.py  GeoPlot.py  PassengersDistance.py  SeatOccupancy.py  Visualization.py  flight_model.py
